# stratify

./: Cargo.toml  README.md  RELEASING.md  action.yml  dist-workspace.toml  stratify.toml
.github/workflows/: ci.yml  release.yml  stratify.yml
crates/stratify-analysis/: Cargo.toml
crates/stratify-analysis/src/: boundaries.rs  complexity.rs  cycles.rs  deadcode.rs  duplication.rs  hotspot.rs  ignore.rs  imports.rs  lib.rs  resolve.rs
crates/stratify-cli/: Cargo.toml
crates/stratify-cli/src/: churn.rs  gitmeta.rs  lsp.rs  main.rs  mcp.rs  run.rs
crates/stratify-cli/tests/: e2e.rs  e2e_boundary.rs  e2e_complexity.rs  e2e_cycle.rs  e2e_dup.rs  e2e_go.rs  e2e_goboundary.rs  e2e_gocycle.rs  e2e_hotspot.rs  e2e_ignore.rs  e2e_lsp.rs  e2e_mcp.rs  e2e_otlp.rs  e2e_preset.rs  e2e_py.rs  e2e_pypkg.rs  e2e_ruby.rs  e2e_rust.rs  e2e_sarif.rs  e2e_ts.rs  e2e_xfile.rs  gate.rs  stratify.toml
crates/stratify-cli/tests/sample-boundary/: stratify.toml
crates/stratify-cli/tests/sample-boundary/models/: user.rb
crates/stratify-cli/tests/sample-complex/: gnarly.rb
crates/stratify-cli/tests/sample-cycle/: one.rb  two.rb
crates/stratify-cli/tests/sample-dup/: one.rb  two.rb
crates/stratify-cli/tests/sample-go/: app.go  lib.go
crates/stratify-cli/tests/sample-goboundary/: stratify.toml
crates/stratify-cli/tests/sample-goboundary/db/: store.go
crates/stratify-cli/tests/sample-goboundary/handlers/: api.go
crates/stratify-cli/tests/sample-gocycle/a/: a.go  extra.go
crates/stratify-cli/tests/sample-gocycle/b/: b.go
crates/stratify-cli/tests/sample-ignore/: keep.rb  stratify.toml
crates/stratify-cli/tests/sample-ignore/skip/: ignored.rb
crates/stratify-cli/tests/sample-java/: App.java  Unused.java
crates/stratify-cli/tests/sample-py/: app.py  unused.py
crates/stratify-cli/tests/sample-pypkg/pkg_a/: __init__.py
crates/stratify-cli/tests/sample-pypkg/pkg_b/: __init__.py
crates/stratify-cli/tests/sample-rails/: stratify.toml
crates/stratify-cli/tests/sample-rails/app/controllers/: users_controller.rb
crates/stratify-cli/tests/sample-ruby/: app.rb  unused.rb
crates/stratify-cli/tests/sample-rust/: lib.rs
crates/stratify-cli/tests/sample-ts/: app.ts  unused.ts
crates/stratify-cli/tests/sample-xfile/: greeter.rb
crates/stratify-core/: Cargo.toml
crates/stratify-core/src/: confidence.rs  finding.rs  graph.rs  ir.rs  lib.rs
crates/stratify-lang/: Cargo.toml
crates/stratify-lang-go/: Cargo.toml
crates/stratify-lang-go/src/: extract.rs  lib.rs
crates/stratify-lang-java/: Cargo.toml
crates/stratify-lang-java/src/: extract.rs  lib.rs
crates/stratify-lang-py/: Cargo.toml
crates/stratify-lang-py/src/: extract.rs  lib.rs
crates/stratify-lang-ruby/: Cargo.toml
crates/stratify-lang-ruby/src/: extract.rs  lib.rs
crates/stratify-lang-rust/: Cargo.toml
crates/stratify-lang-rust/src/: extract.rs  lib.rs
crates/stratify-lang-ts/: Cargo.toml
crates/stratify-lang-ts/src/: extract.rs  lib.rs
crates/stratify-lang/src/: lib.rs  walk.rs
crates/stratify-report/: Cargo.toml
crates/stratify-report/src/: human.rs  json.rs  lib.rs  sarif.rs
crates/stratify-telemetry/: Cargo.toml
crates/stratify-telemetry/src/: emit.rs  lib.rs
docs/superpowers/plans/: 2026-06-12-stratify-m1-walking-skeleton.md  2026-06-12-stratify-m2-ruby-adapter.md  2026-06-12-stratify-m3-duplication.md  2026-06-12-stratify-m4-complexity.md  2026-06-12-stratify-m5-hotspots.md  2026-06-12-stratify-m6-cycles.md  2026-06-13-stratify-m10-lsp.md  2026-06-13-stratify-m11-typescript.md  2026-06-13-stratify-m12-python.md  2026-06-13-stratify-m13-go.md  2026-06-13-stratify-m14-cross-file-calls.md  2026-06-13-stratify-m15-boundary-presets.md  2026-06-13-stratify-m7-boundaries.md  2026-06-13-stratify-m8-sarif.md  2026-06-13-stratify-m9-mcp.md  2026-06-14-stratify-m16-python-init.md  2026-06-14-stratify-m17-go-cycles.md  2026-06-14-stratify-m18-otlp-telemetry.md  2026-06-14-stratify-m19-distribution.md
docs/superpowers/specs/: 2026-06-12-stratify-design.md  2026-06-14-stratify-m18-otlp-telemetry-design.md
