[workspace]
resolver = "2"
members = [
  "crates/stratify-core",
  "crates/stratify-lang",
  "crates/stratify-lang-java",
  "crates/stratify-lang-ruby",
  "crates/stratify-lang-ts",
  "crates/stratify-lang-py",
  "crates/stratify-lang-go",
  "crates/stratify-lang-rust",
  "crates/stratify-analysis",
  "crates/stratify-report",
  "crates/stratify-telemetry",
  "crates/stratify-cli",
]

[workspace.package]
edition = "2021"
version = "0.4.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stratify-dev/stratify"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
globset = "0.4"
toml = "0.8"
tree-sitter = "0.24"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
insta = { version = "1", features = ["json"] }
streaming-iterator = "0.1"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["experimental_metrics_periodic_reader_no_runtime"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["http-proto", "reqwest-blocking-client", "metrics", "logs"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
