[package]
name = "stratify-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "stratify"
path = "src/main.rs"

[dependencies]
stratify-core = { path = "../stratify-core" }
stratify-lang = { path = "../stratify-lang" }
stratify-lang-java = { path = "../stratify-lang-java" }
stratify-lang-ruby = { path = "../stratify-lang-ruby" }
stratify-analysis = { path = "../stratify-analysis" }
stratify-report = { path = "../stratify-report" }
clap = { workspace = true }
ignore = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
