[package]
name = "stratify-lang-ruby"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
stratify-core = { path = "../stratify-core" }
stratify-lang = { path = "../stratify-lang" }
tree-sitter = { workspace = true }
tree-sitter-ruby = { workspace = true }
streaming-iterator = { workspace = true }
