[package]
name = "stratify-lang-rust"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
stratify-core = { path = "../stratify-core" }
stratify-lang = { path = "../stratify-lang" }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
streaming-iterator = { workspace = true }
