[package]
name = "stratify-lang-ts"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
stratify-core = { path = "../stratify-core" }
stratify-lang = { path = "../stratify-lang" }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
streaming-iterator = { workspace = true }
